# wsman-mei-library

./: CMakeLists.txt  Readme.md
MEIClient/: CMakeLists.txt  Makefile
WsmanClient/: CMakeLists.txt  Makefile
WsmanClient/WsmanClientExample/: CMakeLists.txt  GetGeneralSettings.cpp  Makefile
